# lunaclaw

./: .gitignore  Makefile  README.md  pyproject.toml
config/: default.yaml
lunaclaw/: __init__.py  main.py
lunaclaw/audit/: tracer.py  types.py
lunaclaw/core/: agent.py  config.py  context.py  events.py  planner.py  subagent.py
lunaclaw/interfaces/: cli.py
lunaclaw/llm/: provider.py
lunaclaw/mcp/: client.py  registry.py
lunaclaw/memory/: index.py  store.py
lunaclaw/rag/: embeddings.py  engine.py  store.py
lunaclaw/tools/: base.py  file_ops.py  mcp.py  memory.py  rag.py  registry.py  shell.py  web_fetch.py  web_search.py
scripts/: test_local_model.py
tests/: test_integration.py
tests/audit/: test_audit_logging.py  test_tracer.py
tests/core/: test_agent.py  test_config.py  test_events.py  test_planner.py
tests/llm/: test_provider.py
tests/mcp/: test_mcp.py
tests/memory/: test_memory.py
tests/rag/: test_rag.py
tests/tools/: test_file_ops.py  test_registry.py  test_shell.py  test_web.py
