[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lunaclaw"
version = "0.2.0"
description = "A simple, powerful CLI agent assistant"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.40",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.27",
    "duckduckgo-search>=6.0",
]

[project.optional-dependencies]
rag = [
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "ruff>=0.4",
]

[project.scripts]
lunaclaw = "lunaclaw.main:cli"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
